fix: made scrollbar thumb darker

--- a/app/globals.css
+++ b/app/globals.css
@@ -59,7 +59,7 @@ body {
 
 ::-webkit-scrollbar-thumb:horizontal {
   width: 50px;
-  background-color: #ccc;
+  background-color: #918989;
   -webkit-border-radius: 3px;
 }
 
